--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,8 +12,8 @@ on:
     branches: [ master ]
 
 jobs:
-  phpunit:
-    name: Tests (PHPUnit)
+  pest:
+    name: Tests (Pest)
     runs-on: ubuntu-latest
 
     steps:
@@ -21,7 +21,7 @@ jobs:
     - name: Install composer dependencies
       run: composer install
     - name: Run tests
-      run: vendor/bin/phpunit
+      run: vendor/bin/pest
 
   phpstan:
     name: Static analysis (PHPStan)
