--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "ArchTech\\SEO\\PackageServiceProvider"
+                "ArchTech\\SEO\\SEOServiceProvider"
             ]
         }
     }
