--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
     "require": {
         "php": "^8.0",
         "illuminate/support": "^8.24",
-        "imliam/laravel-blade-helper": "^1.0"
+        "imliam/laravel-blade-helper": "^1.0",
+        "intervention/image": "^2.7"
     },
     "require-dev": {
         "orchestra/testbench": "^6.9",
