--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "orchestra/testbench": "^6.9",
         "nunomaduro/larastan": "^0.6.10",
         "pestphp/pest": "^1.2",
-        "pestphp/pest-plugin-laravel": "^1.0"
+        "pestphp/pest-plugin-laravel": "^1.0",
+        "intervention/image": "^2.7"
     },
     "extra": {
         "laravel": {
