--- a/composer.json
+++ b/composer.json
@@ -24,11 +24,11 @@
     },
     "require": {
         "php": "^8.0",
-        "illuminate/support": "^8.24",
-        "imliam/laravel-blade-helper": "^1.0"
+        "illuminate/support": "^8.24|^9.0",
+        "imliam/laravel-blade-helper": "^1.4"
     },
     "require-dev": {
-        "orchestra/testbench": "^6.23",
+        "orchestra/testbench": "^6.23|^7.0",
         "nunomaduro/larastan": "^1.0",
         "pestphp/pest": "^1.2",
         "pestphp/pest-plugin-laravel": "^1.0",
@@ -40,5 +40,7 @@
                 "ArchTech\\SEO\\SEOServiceProvider"
             ]
         }
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
