Allow setting tag('og:title', ...)

--- a/composer.json
+++ b/composer.json
@@ -42,5 +42,10 @@
         }
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "config": {
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
+        }
+    }
 }
