--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     },
     "require": {
         "php": "^8.0",
-        "illuminate/support": "^8.24|^9.0",
+        "illuminate/support": "^8.24|^9.0|^10.0",
         "imliam/laravel-blade-helper": "^1.4"
     },
     "require-dev": {
