--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         "illuminate/view": "^8.24|^9.0|^10.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^6.23|^7.0",
+        "orchestra/testbench": "^6.23|^7.0|^8.0",
         "nunomaduro/larastan": "^1.0",
         "pestphp/pest": "^1.2",
         "pestphp/pest-plugin-laravel": "^1.0",
