--- a/composer.json
+++ b/composer.json
@@ -30,8 +30,8 @@
     "require-dev": {
         "orchestra/testbench": "^6.23|^7.0|^8.0",
         "nunomaduro/larastan": "^1.0",
-        "pestphp/pest": "^1.2",
-        "pestphp/pest-plugin-laravel": "^1.0",
+        "pestphp/pest": "^1.2|^2.0",
+        "pestphp/pest-plugin-laravel": "^1.0|^2.0",
         "intervention/image": "^2.7"
     },
     "extra": {
