--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Setup PHP
+      uses: shivammathur/setup-php@v2
+      with:
+        php-version: 8.2
+        tools: composer:v2
+        coverage: none
+
     - name: Install composer dependencies
       run: composer require "laravel/framework:^${{matrix.laravel}}.0"
     - name: Run tests
