--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,64 +3,112 @@ name: CI
 on:
   push:
   pull_request:
-    branches: [ master ]
+    branches:
+      - master
 
 jobs:
   pest:
     name: Tests (Pest) L${{ matrix.laravel }}
+
+
+
     runs-on: ubuntu-latest
+
     strategy:
       matrix:
-        laravel: [10, 11]
+        laravel: [10, 11, '12']
 
-    steps:
-    - uses: actions/checkout@v2
-    - name: Setup PHP
-      uses: shivammathur/setup-php@v2
-      with:
-        php-version: 8.2
-        tools: composer:v2
-        coverage: none
-    - name: Install composer dependencies
-      run: composer require "laravel/framework:^${{matrix.laravel}}.0"
-    - name: Run tests
-      run: vendor/bin/pest
 
-  phpstan:
-    name: Static analysis (PHPStan)
-    runs-on: ubuntu-latest
 
-    steps:
-    - uses: actions/checkout@v2
-    - name: Setup PHP
-      uses: shivammathur/setup-php@v2
-      with:
-        php-version: 8.2
-        tools: composer:v2
-        coverage: none
-    - name: Install composer dependencies
-      run: composer install
-    - name: Run phpstan
-      run: vendor/bin/phpstan analyse
-
-  php-cs-fixer:
-    name: Code style (php-cs-fixer)
-    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
+
+
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
           php-version: 8.2
           tools: composer:v2
           coverage: none
+
+
+
+      - name: Install composer dependencies
+        run: composer require "laravel/framework:^${{matrix.laravel}}.0"
+
+
+
+      - name: Run tests
+        run: vendor/bin/pest
+
+  phpstan:
+    name: Static analysis (PHPStan)
+
+
+
+    runs-on: ubuntu-latest
+
+
+
+    steps:
+      - uses: actions/checkout@v2
+
+
+
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: 8.2
+          tools: composer:v2
+          coverage: none
+
+
+
+      - name: Install composer dependencies
+        run: composer install
+
+
+
+      - name: Run phpstan
+        run: vendor/bin/phpstan analyse
+
+  php-cs-fixer:
+    name: Code style (php-cs-fixer)
+
+
+
+    runs-on: ubuntu-latest
+
+
+
+    steps:
+      - uses: actions/checkout@v2
+
+
+
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: 8.2
+          tools: composer:v2
+          coverage: none
+
+
+
       - name: Install php-cs-fixer
         run: composer global require friendsofphp/php-cs-fixer
+
+
+
       - name: Run php-cs-fixer
         run: $HOME/.composer/vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.php
+
+
+
       - name: Commit changes from php-cs-fixer
         uses: EndBug/add-and-commit@v5
         with:
-          author_name: "PHP CS Fixer"
-          author_email: "phpcsfixer@example.com"
+          author_name: PHP CS Fixer
+          author_email: phpcsfixer@example.com
           message: Fix code style (php-cs-fixer)
