--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,24 +1,21 @@
-name: CI
+name: run-tests
 
 on:
   push:
+    branches: [main]
   pull_request:
-    branches:
-      - master
+    branches: [main]
 
 jobs:
-  pest:
-    name: Tests (Pest) P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
-
+  test:
     runs-on: ${{ matrix.os }}
-
     strategy:
       fail-fast: true
       matrix:
-        os: [ ubuntu-latest, windows-latest ]
-        php: [ 8.1, 8.2 ]
-        laravel: [ 10.*, 11.*, 12.* ]
-        stability: [ prefer-lowest, prefer-stable ]
+        os: [ubuntu-latest, windows-latest]
+        php: [8.1, 8.2]
+        laravel: [10.*, 11.*, 12.*]
+        stability: [prefer-lowest, prefer-stable]
         include:
           - laravel: 10.*
             testbench: 8.*
@@ -34,8 +31,12 @@ jobs:
             php: 8.1
           - laravel: 12.*
             php: 8.1
+
+    name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
@@ -53,44 +54,6 @@ jobs:
         run: |
           composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" "nesbot/carbon:${{ matrix.carbon }}" --no-interaction --no-update
           composer update --${{ matrix.stability }} --prefer-dist --no-interaction
-      - name: Run tests
+
+      - name: Execute tests
         run: vendor/bin/pest --ci
-
-  phpstan:
-    name: Static analysis (PHPStan)
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: 8.2
-          tools: composer:v2
-          coverage: none
-
-      - name: Install composer dependencies
-        run: composer install
-      - name: Run phpstan
-        run: vendor/bin/phpstan analyse
-
-  php-cs-fixer:
-    name: Code style (php-cs-fixer)
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: 8.2
-          tools: composer:v2
-          coverage: none
-      - name: Install php-cs-fixer
-        run: composer global require friendsofphp/php-cs-fixer
-      - name: Run php-cs-fixer
-        run: $HOME/.composer/vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.php
-      - name: Commit changes from php-cs-fixer
-        uses: EndBug/add-and-commit@v5
-        with:
-          author_name: PHP CS Fixer
-          author_email: phpcsfixer@example.com
-          message: Fix code style (php-cs-fixer)
