--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,11 @@ name: CI
 
 on:
   push:
-    branches: [master]
+    branches:
+      - master
   pull_request:
-    branches: [master]
+    branches:
+      - master
 
 jobs:
   test:
@@ -13,24 +15,33 @@ jobs:
       fail-fast: true
       matrix:
         os: [ubuntu-latest, windows-latest]
-        php: [8.1, 8.2]
-        laravel: [10.*, 11.*, 12.*]
+        php: [8.4, 8.3, 8.2, 8.1, 8.0]
+        laravel: ['9.*', '10.*', '11.*', '12.*']
         stability: [prefer-lowest, prefer-stable]
         include:
-          - laravel: 10.*
-            testbench: 8.*
-            carbon: ^2.63
-          - laravel: 11.*
-            testbench: 9.*
-            carbon: ^2.72.2
           - laravel: 12.*
             testbench: 10.*
             carbon: ^3.8.4
+          - laravel: 11.*
+            testbench: 9.*
+            carbon: ^3.8.4
+          - laravel: 10.*
+            testbench: 8.*
+            carbon: ^2.63
+          - laravel: 9.*
+            testbench: 7.*
+            carbon: ^2.63
         exclude:
+          - laravel: 10.*
+            php: 8.0
           - laravel: 11.*
             php: 8.1
+          - laravel: 11.*
+            php: 8.0
           - laravel: 12.*
             php: 8.1
+          - laravel: 12.*
+            php: 8.0
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
 
@@ -56,4 +67,4 @@ jobs:
           composer update --${{ matrix.stability }} --prefer-dist --no-interaction
 
       - name: Execute tests
-        run: vendor/bin/pest --ci
+        run: vendor/bin/phpunit
