--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest]
         php: [8.4, 8.3, 8.2]
-        laravel: ['10.*', '11.*', '12.*']
+        laravel: ['11.*', '12.*']
         stability: [prefer-lowest, prefer-stable]
         include:
           - laravel: 12.*
@@ -22,9 +22,6 @@ jobs:
           - laravel: 11.*
             testbench: 9.*
             carbon: ^3.8.4
-          - laravel: 10.*
-            testbench: 8.*
-            carbon: ^2.63
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
 
