--- a/composer.json
+++ b/composer.json
@@ -30,8 +30,8 @@
     "require-dev": {
         "orchestra/testbench": "^8.0|^9.0|^10.0",
         "larastan/larastan": "^2.4|^3.1",
-        "pestphp/pest": "^2.0",
-        "pestphp/pest-plugin-laravel": "^2.0",
+        "pestphp/pest": "^2.0|^3.0",
+        "pestphp/pest-plugin-laravel": "^2.0|^3.0",
         "intervention/image": "^2.7"
     },
     "extra": {
