--- a/phpstan.neon
+++ b/phpstan.neon
@@ -10,10 +10,10 @@ parameters:
     universalObjectCratesClasses:
         - Illuminate\Routing\Route
         - ArchTech\SEO\SEOManager
-    checkMissingIterableValueType: false
 
     ignoreErrors:
         - '#^Method ArchTech\\SEO\\SEOManager::flipp\(\) should return static\(ArchTech\\SEO\\SEOManager\)\|string but returns array\|string\|null\.$#'
         - '#^Method ArchTech\\SEO\\SEOManager::previewify\(\) should return static\(ArchTech\\SEO\\SEOManager\)\|string but returns array\|string\|null\.$#'
         - '#^Method ArchTech\\SEO\\SEOManager::render\(\) has parameter \$args with no type specified\.$#'
         - '#^Parameter \#1 \$value of function e expects#'
+        - identifier: missingType.iterableValue
