--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        laravel: [10, 11]
+        laravel: [10, 11, 12]
 
     steps:
     - uses: actions/checkout@v2
