--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,8 @@
     },
     "require": {
         "php": "^8.2",
-        "illuminate/support": ">=10.0",
-        "illuminate/view": ">=10.0"
+        "illuminate/support": "^10.0|^11.0|^12.0",
+        "illuminate/view": "^10.0|^11.0|^12.0"
     },
     "require-dev": {
         "orchestra/testbench": ">=8.0",
